src/test/ui/macros/macro-export-on-modularized-macros.stderr
error: `#[macro_export]` cannot be used on `macro` items
  --> $DIR/macro-export-on-modularized-macros.rs:5:1
   |
LL | macro m1() {}
   | ^^^^^^^^^^^^^

error: `#[macro_export]` cannot be used on `macro_rules` with `pub`
  --> $DIR/macro-export-on-modularized-macros.rs:8:1
   |
LL | pub macro_rules! m2 { () => {} }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

